--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/themes/custom/light/img/icons/favicon-16x16.png">
   <link rel="manifest" href="/themes/custom/light/manifest.json">
 
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#4a4a4a">
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
   <meta name="theme-color" content="#dddddd">
 
