--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/themes/custom/light/img/icons/favicon-16x16.png">
   <link rel="manifest" href="/themes/custom/light/manifest.json">
 
-  <meta name="msapplication-TileColor" content="#4a4a4a">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
-  <meta name="theme-color" content="#4a4a4a">
+  <meta name="theme-color" content="#dddddd">
 
   <meta property="og:site_name" content="vl4sov.ml" />
   <meta property="og:type" content="website" />
