--- a/lua.html
+++ b/lua.html
@@ -142,6 +142,9 @@
                 </div>
                 <div class="lua-page--description">
                   <div>
+                    <a href="/terms.html">Пользовательское соглашение</a>
+                  </div>
+                  <div>
                     <a href="/how-to-install.html">Инструкция по установке</a>
                   </div>
                   <div>
